[project]
name = "KTRtracker"
version = "0.1.0"
description = "A comprehensive image analysis and tracking package"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "tifffile",
    "scikit-image",
    "cellpose",
    "scipy"  # 追加の依存関係
]

[project.optional-dependencies]
napari = ["napari"]
dev = ["pytest"]